[package]
name = "elimination-backoff-stack"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "*"
rand = "*"
num_cpus = "*"

[dev-dependencies]
quickcheck = "*"
criterion = "0.3"

[[bench]]
name = "lib"
harness = false
